Align navigation links with routes

--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -116,7 +116,7 @@
       <p>Explora expertos, crea una solicitud y mira el seguimiento por estado.</p>
       <div class="cta">
         <a class="btn btn--primary" routerLink="/workers">Explorar expertos</a>
-        <a class="btn btn--ghost" routerLink="/requests/request-create">Crear solicitud</a>
+        <a class="btn btn--ghost" routerLink="/requests/new">Crear solicitud</a>
       </div>
     </div>
   </section>
